--- a/index.html
+++ b/index.html
@@ -17,38 +17,46 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Paris</h1>
-        <ul>
-          <li>Friday 16:00</li>
-          <li>Sunny</li>
-          <li>Temperature</li>
-        </ul>
-        <div class="row">
-          <div class="col-8">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
-            />
-            34°C | 93°C
-          </div>
-          <div class="col-4">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>Paris</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 28%</li>
-              <li>Wind: 10 km/hr</li>
+              <li>Friday 16:00</li>
+              <li>Sunny</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Clear"
+                  id="icon"
+                />
+                <strong id="temperature">30</strong>
+                <small class="units">°C | <a href="#">°F</a></small>
+              </div>
+            </div>
+
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 28%</li>
+                <li>Wind: 10 km/hr</li>
+              </ul>
+            </div>
+          </div>
         </div>
-      </div>
-      <small
-        ><a
-          href="https://github.com/catrionaxpn/Weather-app_week7"
-          target="_blank"
-          >Open-source code</a
+        <small
+          ><a
+            href="https://github.com/catrionaxpn/Weather-app_week7"
+            target="_blank"
+            >Open-source code</a
+          >
+          lovingly created by Catriona Easton-Lawrence</small
         >
-        by Catriona Easton-Lawrence</small
-      >
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
