--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
   </head>
@@ -20,10 +20,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Paris</h1>
+            <h1 id="city">Paris</h1>
             <ul>
               <li>Friday 16:00</li>
-              <li>Sunny</li>
+              <li id="description">Sunny</li>
             </ul>
           </div>
           <div class="row">
@@ -34,7 +34,7 @@
                   alt="Clear"
                   id="icon"
                 />
-                <strong id="temperature">30</strong>
+                <strong id="temperature"></strong>
                 <small class="units">°C | <a href="#">°F</a></small>
               </div>
             </div>
@@ -54,7 +54,7 @@
             target="_blank"
             >Open-source code</a
           >
-          lovingly created by Catriona Easton-Lawrence</small
+          by Catriona Easton-Lawrence</small
         >
       </div>
     </div>
