--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0%</li>
-                <li>Humidity: 28%</li>
-                <li>Wind: 10 km/hr</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>km/hr</li>
               </ul>
             </div>
           </div>
